--- a/dev/ingress.yaml
+++ b/dev/ingress.yaml
@@ -6,6 +6,22 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/proxy-body-size: "10m"
+    
+  source:
+    repoURL: https://github.com/sanjuk8s/argocd-app-config.git
+    targetRevision: HEAD
+    path: dev
+  destination: 
+    server: https://kubernetes.default.svc
+    namespace: myapp
+
+  syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
+
+    automated:
+      selfHeal: true
+      prune: true
 spec:
   rules:
   - host: argocd.example.com  # Replace with your desired host
